# abstract_map

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
docs/: _config.yml  index.md
docs/_includes/: video_player.html
docs/_sass/: jekyll-theme-slate.scss
docs/assets/images/: .abstract_map_light_vs_dark.xcf
experiments/: demo.xml  zoo_hierarchy.xml  zoo_mapping.xml
include/abstract_map/: symbol_mapping.h  tag_interpreter.h
launch/: abstract_map.launch  experiment.launch  find_all_tags.launch  find_tags.launch  guiabot.launch
msg/: SymbolicSpatialInformation.msg
nodes/: abstract_map  abstract_map_node  hierarchy_publisher  ssi_commentator  visualiser
scripts/: debug_interpreting.py  debug_layout_network.py  debug_layout_optimisation.py  hierarchy_viewer.py
src/: abstract_map_ros.py  abstract_map_visualiser.py  abstractmapros.py  tag_interpreter.py  tag_interpreter_node.cc
src/abstract_map/: __init__.py  abstract_map.py  spatial_layout.py  symbol_mapping.cc  tag_interpreter.cc  tools.py  visual.py
src/abstract_map_lib/: __init__.py  abstract_map.py  spatial_layout.py  tools.py  visual.py
src/abstractmap/: __init__.py
