<?xml version="1.0"?>
<package format="2">
  <name>abstract_map</name>
  <version>1.0.0</version>
  <description>The abstract_map package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://btalb.github.io/abstract_map/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tinyxml</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
